alt property in img tag modified

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="container">
         <div class="qrcode-card">
-            <img src="./src/images/image-qr-code.png" alt="QR Code" class="qrcode-image">
+            <img src="./src/images/image-qr-code.png" alt="QR code to frontendmentor.io" class="qrcode-image">
             <div class="text-box">
                 <h1 class="card-title">
                     Improve your front-end skills by building projects
